Portrait is now added to the model

--- a/src/app/components/sheet/reusable/portrait/portrait.component.html
+++ b/src/app/components/sheet/reusable/portrait/portrait.component.html
@@ -4,7 +4,9 @@
     {{ 'SHEET.PORTRAIT.PORTRAIT' | translate }}
   </div>
   <div class="sheetComponentBody" (click)="onRequestUpdate()">
-    <input accept="image/png, image/jpeg, image/jpg, image/gif" type="file" (change)="onNativeInputFileSelect($event)" #inputFile hidden/>
-    <img src="assets/images/empty-portrait.png" alt="portrait">
+    <input accept="image/png, image/jpeg, image/jpg, image/gif" type="file" (change)="onNativeInputFileSelect($event)"
+           #inputFile hidden/>
+    <img [src]="readSheet.metaData.identity.portrait"
+         alt="portrait">
   </div>
 </div>
