Improved the portrait styling and added a new avatar component

--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -9,10 +9,8 @@
         <md-icon>keyboard_arrow_left</md-icon>
       </button>
     </div>
-    <div class="flex-item">
-      <div class="avatar">
-        <img src="assets/images/empty-portrait.png">
-      </div>
+    <div class="flex-item avatar-item">
+      <gurpsy-avatar [width]="'48px'" [height]="'48px'"></gurpsy-avatar>
     </div>
     <div class="flex-item player">
       {{readSheet.metaData.playerInformation.player}}
