--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -34,9 +34,7 @@
       <md-icon>lock_open</md-icon>
     </button>
 
-    <div fxShow="false" fxShow.xs class="avatar flex-item">
-      <img src="assets/images/empty-portrait.png">
-    </div>
+    <gurpsy-avatar fxShow="false" fxShow.xs class="flex-item"></gurpsy-avatar>
 
     <div class="headerSettings flex-container flex-item">
       <button md-icon-button [md-menu-trigger-for]="settings">
