--- a/src/app/gurpsy.component.scss
+++ b/src/app/gurpsy.component.scss
@@ -3,11 +3,8 @@ md-toolbar {
 }
 
 md-toolbar {
-  .avatar {
-    img {
-      height: 34px;
-      width: 34px;
-    }
+  gurpsy-avatar {
+    margin-top: 10px;
   }
 }
 
