--- a/src/app/components/side-navigation/side-navigation.component.scss
+++ b/src/app/components/side-navigation/side-navigation.component.scss
@@ -4,12 +4,8 @@
     .close {
       text-align: end;
     }
-    .avatar {
+    .avatar-item {
       padding-left: 8px;
-      img {
-        width: 48px;
-        height: 48px;
-      }
     }
     .player {
       font-size: x-small;
