Changed the weight property to a number

--- a/src/app/components/sheet/reusable/description/description.component.html
+++ b/src/app/components/sheet/reusable/description/description.component.html
@@ -29,7 +29,7 @@
       <table>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.WEIGHT' | translate }}</td>
-          <td>{{readSheet.metaData.description.weight}}</td>
+          <td>{{readSheet.metaData.description.weight | weight}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.HEIGHT' | translate }}</td>
