--- a/src/gurpsy-palette.scss
+++ b/src/gurpsy-palette.scss
@@ -5,11 +5,11 @@ $white-87-opacity: rgba(white, 0.87);
 
 $gurpsy-dark-blue: (
   50: #E4E5E7,
-  100: #BBBFC3,
+  100: #BBBFC5,
   200: #8D949B,
   300: #5F6972,
-  400: #3D4854,
-  500: #1B2836,
+  400: #7087AB,
+  500: #1A2431,
   600: #182430,
   700: #141E29,
   800: #101822,
@@ -174,7 +174,7 @@ $gurpsy-night-theme-foreground: (
   disabled:           rgba(white, 0.3),
   disabled-button:    rgba(white, 0.3),
   disabled-text:      rgba(white, 0.3),
-  hint-text:          map_get($gurpsy-light-blue, 100),
+  hint-text:          map_get($gurpsy-dark-blue, 400),
   secondary-text:     rgba(white, 0.4),
   icon:               white,
   icons:              white,
@@ -191,7 +191,7 @@ $gurpsy-night-theme-background: (
   card:                     map_get($gurpsy-dark-blue, 500),
   dialog:                   map_get($gurpsy-dark-blue, 700),
   disabled-button:          map_get($gurpsy-dark-blue, 300),
-  raised-button:            map-get($gurpsy-dark-blue, 800),
+  raised-button:            map-get($gurpsy-dark-blue, 500),
   focused-button:           rgba(white, 0.12),
   selected-button:          map_get($gurpsy-light-blue, 900),
   selected-disabled-button: map_get($gurpsy-dark-blue, 300),
