Fixed some styling issues

--- a/src/app/components/sheet/reusable/encumbrance/encumbrance.component.html
+++ b/src/app/components/sheet/reusable/encumbrance/encumbrance.component.html
@@ -1,4 +1,4 @@
-<div class="sheetComponent">
+<div class="sheetComponent encumbrance">
   <div class="sheetComponentHeader">
     {{ 'SHEET.ENCUMBRANCE.ENCUMBRANCE' | translate }}
   </div>
