--- a/src/app/components/sheet/reusable/encumbrance/encumbrance.component.scss
+++ b/src/app/components/sheet/reusable/encumbrance/encumbrance.component.scss
@@ -1,5 +1,4 @@
-
-.sheetComponent .sheetComponentBody {
+.sheetComponent.encumbrance .sheetComponentBody {
   padding: 0px 0px 2px 0px;
 
   table {
