--- a/src/app/components/sheet/reusable/hit-location/hit-location.component.html
+++ b/src/app/components/sheet/reusable/hit-location/hit-location.component.html
@@ -1,4 +1,4 @@
-<div class="sheetComponent">
+<div class="sheetComponent hitLocation">
   <div class="sheetComponentHeader">
     {{ 'SHEET.HIT_LOCATION.HIT_LOCATION' | translate }}
   </div>
