--- a/src/app/components/sheet/reusable/hit-location/hit-location.component.scss
+++ b/src/app/components/sheet/reusable/hit-location/hit-location.component.scss
@@ -1,6 +1,4 @@
-//@import "../../../../../gurpsy-material-theme";
-
-.sheetComponent .sheetComponentBody {
+.sheetComponent.hitLocation .sheetComponentBody {
   padding: 0px 0px 2px 0px;
 
   table {
