Added basic implementation of no-sheet-loaded view

--- a/src/app/components/generic/avatar/avatar.component.html
+++ b/src/app/components/generic/avatar/avatar.component.html
@@ -1,4 +1,5 @@
-<img [src]="readSheet.metaData.identity.portrait"
+<img *ngIf="readSheet"
+     [src]="readSheet.metaData.identity.portrait"
      [style.width]="width"
      [style.height]="height"
      alt="portrait">
