--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -12,10 +12,10 @@
     <div class="flex-item avatar-item">
       <gurpsy-avatar [width]="'48px'" [height]="'48px'"></gurpsy-avatar>
     </div>
-    <div class="flex-item player">
+    <div *ngIf="readSheet" class="flex-item player">
       {{readSheet.metaData.playerInformation.player}}
     </div>
-    <div class="flex-item name">
+    <div *ngIf="readSheet" class="flex-item name">
       {{readSheet.metaData.identity.name}}
     </div>
   </div>
