Added a component for the no-sheet-loaded thingy

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -92,7 +92,7 @@
       </md-card>
     </div>
     <ng-template #noSheet>
-      No Sheet has been loaded
+      <gurpsy-no-sheet-loaded></gurpsy-no-sheet-loaded>
     </ng-template>
   </ng-template>
 </md-sidenav-container>
