Renamed the read- and update sheet

--- a/src/app/components/generic/avatar/avatar.component.html
+++ b/src/app/components/generic/avatar/avatar.component.html
@@ -1,5 +1,5 @@
-<img *ngIf="readSheet"
-     [src]="readSheet.metaData.identity.portrait"
+<img *ngIf="model"
+     [src]="model.metaData.identity.portrait"
      [style.width]="width"
      [style.height]="height"
      alt="portrait">
