--- a/src/app/components/sheet/reusable/fatigue-hit/fatigue-hit.component.html
+++ b/src/app/components/sheet/reusable/fatigue-hit/fatigue-hit.component.html
@@ -6,11 +6,11 @@
     <table>
       <tr>
         <td>{{ 'SHEET.FATIGUE-HIT.CURRENT_FP' | translate }}</td>
-        <td>{{readSheet.secondaryCharacteristics.fatiguePoints}}</td>
+        <td>{{model.secondaryCharacteristics.fatiguePoints}}</td>
       </tr>
       <tr class="last">
         <td>{{ 'SHEET.FATIGUE-HIT.BASIC_FP' | translate }}</td>
-        <td>{{readSheet.secondaryCharacteristics.fatiguePoints}}</td>
+        <td>{{model.secondaryCharacteristics.fatiguePoints}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.FATIGUE-HIT.TIRED' | translate }}</td>
@@ -26,11 +26,11 @@
       </tr>
       <tr>
         <td>{{ 'SHEET.FATIGUE-HIT.CURRENT_HP' | translate }}</td>
-        <td>{{readSheet.secondaryCharacteristics.hitPoints}}</td>
+        <td>{{model.secondaryCharacteristics.hitPoints}}</td>
       </tr>
       <tr class="last">
         <td>{{ 'SHEET.FATIGUE-HIT.BASIC_HP' | translate }}</td>
-        <td>{{readSheet.secondaryCharacteristics.hitPoints}}</td>
+        <td>{{model.secondaryCharacteristics.hitPoints}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.FATIGUE-HIT.REELING' | translate }}</td>
