--- a/src/app/components/sheet/reusable/hit-location/hit-location.component.html
+++ b/src/app/components/sheet/reusable/hit-location/hit-location.component.html
@@ -14,79 +14,79 @@
         <td>-</td>
         <td>{{ 'SHEET.HIT_LOCATION.EYE' | translate }}</td>
         <td>-9</td>
-        <td>{{readSheet.damageResistances.eye}}</td>
+        <td>{{model.damageResistances.eye}}</td>
       </tr>
       <tr>
         <td>3-4</td>
         <td>{{ 'SHEET.HIT_LOCATION.SKULL' | translate }}</td>
         <td>-7</td>
-        <td>{{readSheet.damageResistances.skull}}</td>
+        <td>{{model.damageResistances.skull}}</td>
       </tr>
       <tr>
         <td>5-5</td>
         <td>{{ 'SHEET.HIT_LOCATION.FACE' | translate }}</td>
         <td>-5</td>
-        <td>{{readSheet.damageResistances.face}}</td>
+        <td>{{model.damageResistances.face}}</td>
       </tr>
       <tr>
         <td>6-7</td>
         <td>{{ 'SHEET.HIT_LOCATION.RIGHT_ARM' | translate }}</td>
         <td>-2</td>
-        <td>{{readSheet.damageResistances.rightLeg}}</td>
+        <td>{{model.damageResistances.rightLeg}}</td>
       </tr>
       <tr>
         <td>8-8</td>
         <td>{{ 'SHEET.HIT_LOCATION.RIGHT_LEG' | translate }}</td>
         <td>-2</td>
-        <td>{{readSheet.damageResistances.rightArm}}</td>
+        <td>{{model.damageResistances.rightArm}}</td>
       </tr>
       <tr>
         <td>9-10</td>
         <td>{{ 'SHEET.HIT_LOCATION.TORSO' | translate }}</td>
         <td>0</td>
-        <td>{{readSheet.damageResistances.torso}}</td>
+        <td>{{model.damageResistances.torso}}</td>
       </tr>
       <tr>
         <td>11-11</td>
         <td>{{ 'SHEET.HIT_LOCATION.GROIN' | translate }}</td>
         <td>-3</td>
-        <td>{{readSheet.damageResistances.groin}}</td>
+        <td>{{model.damageResistances.groin}}</td>
       </tr>
       <tr>
         <td>12-12</td>
         <td>{{ 'SHEET.HIT_LOCATION.LEFT_ARM' | translate }}</td>
         <td>-2</td>
-        <td>{{readSheet.damageResistances.leftArm}}</td>
+        <td>{{model.damageResistances.leftArm}}</td>
       </tr>
       <tr>
         <td>13-14</td>
         <td>{{ 'SHEET.HIT_LOCATION.LEFT_LEG' | translate }}</td>
         <td>-2</td>
-        <td>{{readSheet.damageResistances.leftLeg}}</td>
+        <td>{{model.damageResistances.leftLeg}}</td>
       </tr>
       <tr>
         <td>15-15</td>
         <td>{{ 'SHEET.HIT_LOCATION.HAND' | translate }}</td>
         <td>-4</td>
-        <td>{{readSheet.damageResistances.hand}}</td>
+        <td>{{model.damageResistances.hand}}</td>
       </tr>
       <tr>
         <td>16-16</td>
         <td>{{ 'SHEET.HIT_LOCATION.FOOT' | translate }}</td>
         <td>-4</td>
-        <td>{{readSheet.damageResistances.foot}}</td>
+        <td>{{model.damageResistances.foot}}</td>
       </tr>
       <tr>
         <td>17-18</td>
         <td>{{ 'SHEET.HIT_LOCATION.NECK' | translate }}</td>
         <td>-5</td>
-        <td>{{readSheet.damageResistances.neck}}</td>
+        <td>{{model.damageResistances.neck}}</td>
       </tr>
       <tr>
         <td>-</td>
         <td>{{ 'SHEET.HIT_LOCATION.VITALS' | translate }}</td>
         <td>-3</td>
-        <td>{{readSheet.damageResistances.vitals}}</td>
+        <td>{{model.damageResistances.vitals}}</td>
       </tr>
     </table>
   </div>
