--- a/src/app/components/dialog/model-updaters/new-sheet/new-sheet.component.html
+++ b/src/app/components/dialog/model-updaters/new-sheet/new-sheet.component.html
@@ -1,19 +1,21 @@
-<md-dialog-content class="flex-container"
+<md-dialog-content *ngIf="template"
+                   class="flex-container"
                    fxLayout="column"
                    fxLayoutAlign="space-between stretch">
   <md-input-container class="flex-item">
-    <input mdInput placeholder="{{'SHEET.IDENTITY.NAME'| translate}}" [(ngModel)]="model.name" required>
+    <input mdInput placeholder="{{'SHEET.IDENTITY.NAME'| translate}}" [(ngModel)]="template.name" required>
     <md-error>{{'MESSAGE.ERROR.REQUIRED_NAME'| translate}}</md-error>
   </md-input-container>
   <md-input-container class="flex-item">
-    <input mdInput placeholder="{{'SHEET.PLAYER_INFORMATION.PLAYER'| translate}}" [(ngModel)]="model.player" required>
+    <input mdInput placeholder="{{'SHEET.PLAYER_INFORMATION.PLAYER'| translate}}" [(ngModel)]="template.player"
+           required>
     <md-error>{{'MESSAGE.ERROR.REQUIRED_PLAYER'| translate}}</md-error>
   </md-input-container>
 </md-dialog-content>
 
-<md-dialog-actions align="end">
+<md-dialog-actions *ngIf="template" align="end">
   <button md-button color="primary"
-          [disabled]="!model.player || model.player.trim() === '' || !model.name || model.name.trim() === ''"
+          [disabled]="!template.player || template.player.trim() === '' || !template.name || template.name.trim() === ''"
           (click)="onOk()">
     {{'DIALOG.OK'| translate}}
   </button>
